fix: modal not responsive

--- a/css/home.css
+++ b/css/home.css
@@ -92,8 +92,18 @@ body{
     margin-top: 33%;
 }
 
+.popup-modal {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.4);
+    z-index: 999;
+}
+
 .modal{
-    display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 9999; /* Sit on top */
     padding-top: 100px; /* Location of the box */
@@ -101,8 +111,6 @@ body{
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
